--- a/index.ipynb
+++ b/index.ipynb
@@ -44,11 +44,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n",
+      "<class 'str'>\n",
+      "{\"businesses\": [{\"id\": \"DoSU8IPq-Py_YV3kYmXPfQ\", \"alias\": \"trattoria-trecolori-new-york\", \"name\": \"Trattoria Trecolori\", \"image_url\": \"https://s3-media4.fl.yelpcdn.com/bphoto/G8vBgHxbEfoONO0JpLX3Qw/o.jpg\", \"is_closed\": false, \"url\": \"https://www.yelp.com/biz/trattoria-trecolori-new-york?adjust_creative=CSpac0DP3dh6Ata4DVhSkg&utm_campaign=yelp_api_v3&utm_medium=api_v3_business_search&utm_source=CSpac0DP3dh6Ata4DVhSkg\", \"review_count\": 2043, \"categories\": [{\"alias\": \"italian\", \"title\": \"Italian\"}], \"rating\": 4.0, \"coordinates\": {\"latitude\": 40.75998, \"longitude\": -73.98671}, \"transactions\": [\"delivery\", \"pickup\", \"restaurant_reservation\"], \"price\": \"$$\", \"location\": {\"address1\": \"254 West 47th St\", \"address2\": \"\", \"address3\": \"\", \"city\": \"New York\", \"zip_code\": \"10036\", \"country\": \"US\", \"state\": \"NY\", \"display_address\": [\"254 West 47th St\", \"New York, NY 10036\"]}, \"phone\": \"+12129974540\", \"display_phone\": \"(212) 997-4540\", \"distance\": 6083.735166572698}, {\"id\": \"16ZnHpuaaBt92XWeJHCC5A\", \n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "import requests\n",
+    "\n",
+    "client_id = \"CSpac0DP3dh6Ata4DVhSkg\"\n",
+    "api_key = \"SFCnnJOcf6m_LfOl1zlUPokNDLfLQviopzAeMr4E_sUpYq0Q8lljVKOAGJjKHSJLV4yzqbiy_VhvPc5_bcCvHWNHsOeK-4Xz6o2zXYG0OuitsUYnUKOeYEOZ36iaXHYx\"\n",
+    "\n",
+    "term = 'Italian'\n",
+    "location = 'New York NY'\n",
+    "SEARCH_LIMIT = 10\n",
+    "\n",
+    "url = 'https://api.yelp.com/v3/businesses/search'\n",
+    "\n",
+    "headers = {\n",
+    "        'Authorization': 'Bearer {}'.format(api_key),\n",
+    "    }\n",
+    "\n",
+    "url_params = {\n",
+    "                'term': term.replace(' ', '+'),\n",
+    "                'location': location.replace(' ', '+'),\n",
+    "                'limit': SEARCH_LIMIT\n",
+    "            }\n",
+    "response = requests.get(url, headers=headers, params=url_params)\n",
+    "print(response)\n",
+    "print(type(response.text))\n",
+    "print(response.text[:1000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(response.json()['businesses'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8100"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()['total']"
    ]
   },
   {
@@ -64,11 +137,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8100 total matches found.\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-3833abcafe4f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     30\u001b[0m                 \u001b[0;34m'limit'\u001b[0m \u001b[0;34m:\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m              }\n\u001b[0;32m---> 32\u001b[0;31m \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mall_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl_params\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mapi_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-7-3833abcafe4f>\u001b[0m in \u001b[0;36mall_results\u001b[0;34m(url_params, api_key)\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0murl_params\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'offset'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcur\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mdfs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myelp_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl_params\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mapi_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m#Wait a second\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0mcur\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m50\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mdf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdfs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mignore_index\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
-    "# Your code here; use a function or loop to retrieve all the results from your original request"
+    "# Your code here; use a function or loop to retrieve all the results from your original request\n",
+    "import pandas as pd\n",
+    "import time\n",
+    "\n",
+    "def yelp_call(url_params, api_key):\n",
+    "    url = 'https://api.yelp.com/v3/businesses/search'\n",
+    "    headers = {'Authorization': 'Bearer {}'.format(api_key)}\n",
+    "    response = requests.get(url, headers=headers, params=url_params)\n",
+    "    \n",
+    "    df = pd.DataFrame(response.json()['businesses'])\n",
+    "    return df\n",
+    "\n",
+    "def all_results(url_params, api_key):\n",
+    "    num = response.json()['total']\n",
+    "    print('{} total matches found.'.format(num))\n",
+    "    cur = 0\n",
+    "    dfs = []\n",
+    "    while cur < num and cur < 1000:\n",
+    "        url_params['offset'] = cur\n",
+    "        dfs.append(yelp_call(url_params, api_key))\n",
+    "        time.sleep(1) #Wait a second\n",
+    "        cur += 50\n",
+    "    df = pd.concat(dfs, ignore_index=True)\n",
+    "    return df\n",
+    "\n",
+    "term = 'Italian'\n",
+    "location = 'New York NY'\n",
+    "url_params = {  'term': term.replace(' ', '+'),\n",
+    "                'location': location.replace(' ', '+'),\n",
+    "                'limit' : 50\n",
+    "             }\n",
+    "df = all_results(url_params, api_key)\n",
+    "print(len(df))\n",
+    "df.head()"
    ]
   },
   {
@@ -82,11 +208,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-5d6f1c904fee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mget_ipython\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun_line_magic\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'matplotlib'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'inline'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprice\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfillna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprice_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m\"$\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"$$\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"$$$\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"$$$$\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprice\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprice\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprice_dict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "df.price = df.price.fillna(value=0)\n",
+    "price_dict = {\"$\": 1, \"$$\":2, \"$$$\": 3, \"$$$$\":4}\n",
+    "df.price = df.price.map(price_dict)\n",
+    "\n",
+    "pd.plotting.scatter_matrix(df[['price', 'rating', 'review_count']])"
    ]
   },
   {
@@ -100,11 +245,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-895bc4622126>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfolium\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mlat_long\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'coordinates'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mlat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlat_long\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'latitude'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mlong\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlat_long\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'longitude'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "import folium\n",
+    "\n",
+    "lat_long = df['coordinates'].iloc[0]\n",
+    "lat = lat_long['latitude']\n",
+    "long = lat_long['longitude']\n",
+    "yelp_map = folium.Map([lat, long])\n",
+    "\n",
+    "for row in df.index:\n",
+    "    try:\n",
+    "        lat_long = df['coordinates'][row]\n",
+    "        lat = lat_long['latitude']\n",
+    "        long = lat_long['longitude']\n",
+    "        name = df['name'][row]\n",
+    "        rating = df['rating'][row]\n",
+    "        price = df['price'][row]\n",
+    "        details = \"{}\\nPrice: {} Rating:{}\".format(name,str(price),str(rating))\n",
+    "        popup = folium.Popup(details, parse_html=True)\n",
+    "        marker = folium.Marker([lat, long], popup=popup)\n",
+    "        marker.add_to(yelp_map)\n",
+    "    except:\n",
+    "        print('Hit error on row: {}'.format(row))\n",
+    "yelp_map"
    ]
   },
   {
@@ -119,9 +297,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -133,7 +311,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
